# taskflow-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_users_and_refresh_tokens.py  0002_projects_and_members.py  0003_tasks.py  0004_comments.py  0005_comments_created_index.py
app/: main.py  middleware.py
app/api/: deps.py
app/api/routes/: auth.py  comments.py  projects.py  tasks.py
app/core/: config.py  errors.py  logging.py  pagination.py  ratelimit.py  security.py
app/models/: __init__.py  comment.py  project.py  refresh_token.py  task.py  user.py
app/schemas/: auth.py  comments.py  projects.py  tasks.py
app/services/: auth.py  comments.py  projects.py  tasks.py
scripts/: smoke.py
terraform/: .terraform.lock.hcl  README.md  acm.tf  alb.tf  backend.hcl.example  cloudwatch.tf  ec2.tf  iam.tf  monitoring.tf  outputs.tf  security.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf  versions.tf  vpc.tf
tests/: conftest.py  test_auth.py  test_comments.py  test_e2e_journey.py  test_health.py  test_projects.py  test_rate_limit.py  test_tasks.py
