[project]
name = "taskflow-api"
version = "0.1.0"
description = "Task/project management REST API - production-discipline portfolio project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends() in argument defaults is the framework idiom.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Test helpers assign lambdas for brevity; conftest must set env before imports.
"tests/*" = ["E731", "E402"]
